2007-09-04  Akim Demaille  <demaille@gostai.com>

	Let primitives access the context
	* src/object/fwd.hh (primitive_type): Takes an rContext
	as 1st arg.
	* src/object/code-class.cc, src/object/float-class.cc,
	* src/object/float-class.hh, src/object/list-class.cc,
	* src/object/list-class.hh, src/object/object-class.cc,
	* src/object/primitive-class.hh, src/object/primitives.hh,
	* src/runner/runner.cc:
	Adjust.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Use Boost PP
	* src/runner/runner.hh: To factor op() declarations.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Disable "def" instead of "var"
	* src/parser/bison/ugrammar.y: here.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Fix Bison use
	Apparently I didn't know that <TYPE> anotations
	were applied to all the following tokens...
	* src/parser/bison/ugrammar.y: Fix <types>.
	Factor them.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	Use regular idiom for unused values
	* dev/ast-pretty-printer-gen: Don't use a fake function,
	cast to void.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	More automatic generation
	* dev/ast-all-gen: New.
	* dev/ast-ignores-gen: New.
	* dev/ast-visitor-gen: Use Boost PP library.
	* src/ast/Makefile.am: Adjust to use the new generators.
	* src/ast/all.hh: Now generated (should be removed from repo).
	* src/ast/ast.yml (ScopeExp): Rename as...
	(Scope): this.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	We need ReturnExp
	* src/ast/ast.yml (ReturnExp): Decomment it.
	Implement its printer.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	object::State
	* src/object/state.hh, src/object/state.cc: New.
	* src/object/Makefile.am: Adjust.
	* src/object/atom.hh, src/object/atom.hxx: Context now
	holds a State, not a UConnection&.
	* src/object/code-class.cc: Adjust.
	* src/object/context-class.hh: Adjust.
	* src/object/fwd.hh: Declare State.
	* src/runner/runner.cc: Adjust.
	* src/uconnection.cc: Adjust.
